cmake_minimum_required(VERSION 3.27)
project(operating_systems C)

set(CMAKE_C_STANDARD 11)

add_executable(operating_systems chapter-1/exercise-1.c
        chapter-1/exercise-1.c
        chapter-2/exercise-2.c
        chapter-2/exercise-3.c
        chapter-2/exercise-4.c
        chapter-2/exercise-5.c
        chapter-2/sinfo054-groupe08-travail2.c)
